...
                    Project.project.description = projDesp
                }
                canEdit = !canEdit
            },
            modifier = Modifier.align(Alignment.End)
        ){
            Text(if(canEdit)  "Submit" else "Edit")
        }

        BasicTextField(
            value = projTitle,
            onValueChange = {projTitle = it},
            textStyle = TextStyle(color = Color.Blue,
...
